resources/ray-cluster-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ray-httpproxy
  namespace: ray
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: raycluster-autoscaler-head-svc
          # namespace: ray
          port: 8265
  virtualhost:
    fqdn: ray.tanzuworkshops.ml
