resources/ray-cluster-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ray-httpproxy
  namespace: ray
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: raycluster-autoscaler-head-svc
          port: 8265
  virtualhost:
    fqdn: ray.tanzudatadev.ml
